--- a/index.html
+++ b/index.html
@@ -475,6 +475,7 @@
 							box.position.y = randomYPos;
 							box.position.z = randomZPos;
 							var object2 = object.clone();
+							object2.material.color.setHex( 0x00ffec );
 							object2.position.x = randomXPos;
 							object2.position.y = randomYPos-6;
 							object2.position.z = randomZPos;
