--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 			<p class="button button-help" id="helpBtn">Help</p>
 		</div>
 		<script src="js/mainGame.js"></script>
+		<div id="slidecontainer">
+			<p>Lava speed:</p>
+			<input type="range" min="0" max="10" value="3" class="slider" id="lavaSpeed">
+		  </div>
 	</div>
 	<div id="score">
 		<p id="scoreText"></p>
