--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<link href="css/css.css" rel="stylesheet" type="text/css">
-	<style>
-	</style>
+	<link rel="shortcut icon" type="image/png" href="favicon.png" />
 </head>
 
 <body>
@@ -32,7 +31,13 @@
 		<p class="button button-quit" id="quitBtn">Quit</p>
 	</div>
 	<div id="menuScreen">
+		<div id="loadingScreen">
+			<video autoplay="true" poster="images/loadingPoster.jpg">
+				<source src="loading.mp4" type="video/mp4">
+			</video>
+		</div>
 		<img src="images/volcanoescape3.png" alt="volcano" height="700">
+		<div id="muteBtn"> </div>
 		<div id="buttons">
 			<p class="button button-play" id="playBtn">Play</p>
 			<p class="button button-level" id="slectLevelBtn">Select Level</p>
