--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	<div id="selectMenu">
 		<p class="button button-level" id="iceyBtn">Icey Peak</p>
 		<p class="button button-level" id="chemicalBtn">Chemical Lab</p>
+		<p class="button button-blue" id="backBtn">« Back</p>
 	</div>
 
 	<div id="pauseScreen">
@@ -46,8 +47,12 @@
 		<script src="js/mainGame.js"></script>
 		<div id="slidecontainer">
 			<p>Lava speed:</p>
-			<input type="range" min="0" max="10" value="3" class="slider" id="lavaSpeed">
+			<input type="range" min="0" max="8" value="3" class="slider" id="lavaSpeed">
 		</div>
+	</div>
+	<div id="scoreLogo">
+	</div>
+	<div id="finalScore">
 	</div>
 	<div id="score">
 		<p id="scoreText"></p>
