--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
 	</div>
 	<div id="finalScore">
 	</div>
+	<div id="scoreContainer">
+	</div>
+	<div id="scoreDisplay">
+	</div>
 	<div id="score">
 		<p id="scoreText"></p>
 	</div>
