--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div id="menuScreen">
 		<div id="loadingScreen">
 			<video autoplay="true" poster="images/loadingPoster.jpg">
-				<source src="loading.mp4" type="video/mp4">
+				<source src="media/loading.mp4" type="video/mp4">
 			</video>
 		</div>
 		<img src="images/volcanoescape3.png" alt="volcano" height="700">
